objects/Unterkunftsbuchung__c.object
<CustomObject>
    <label>Unterkunftsbuchung</label>
    <nameField>
        <displayFormat>U-{0000}</displayFormat>
        <label>Unterkunftsbuchungs Nummer</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unterkunftsbuchungen</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Unterkunftsbuchungen</relationshipLabel>
        <relationshipName>Unterkunftsbuchungen</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Haustier__c</fullName>
        <label>Haustier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ja</fullName>
                </value>
                <value>
                    <fullName>Nein</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Abreisetag__c</fullName>
        <label>Abreisetag</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Anreisetag__c</fullName>
        <label>Anreisetag</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ContractId__c</fullName>
        <formula>Reisekosten__r.Contract__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContractId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reisekosten__c</fullName>
        <label>Reisekosten</label>
        <referenceTo>Reisekosten__c</referenceTo>
        <relationshipLabel>Unterkunftsbuchungen</relationshipLabel>
        <relationshipName>Unterkunftsbuchungen</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Anzahl_Zimmer__c</fullName>
        <label>Anzahl Zimmer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sonderwuensche__c</fullName>
        <label>Sonderwünsche</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Anzahl_Personen__c</fullName>
        <label>Anzahl Personen</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>max_Preis_pro_Nacht__c</fullName>
        <label>max. Preis pro Nacht</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Kostentraeger_Klinik__c</fullName>
        <label>Kostenträger Klinik</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parkplatz_erwuenscht__c</fullName>
        <label>Parkplatz erwünscht?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>keine Info</fullName>
                    <default>true</default>
                    <label>keine Info</label>
                </value>
                <value>
                    <fullName>Ja</fullName>
                </value>
                <value>
                    <fullName>Nein</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kostentraeger_doctari__c</fullName>
        <label>Kostenträger doctari</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Verpflegung_erwuenscht__c</fullName>
        <label>Verpflegung erwünscht?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nein</fullName>
                    <default>true</default>
                    <label>Nein</label>
                </value>
                <value>
                    <fullName>Ja</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EarliestContractStartDate__c</fullName>
        <formula>Reisekosten__r.Contract__r.Earliest_Contract_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Earliest Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Kochgelegenheit_gew_nscht__c</fullName>
        <description>SFC-2231</description>
        <label>Kochgelegenheit gewünscht</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ja</fullName>
                </value>
                <value>
                    <fullName>nein</fullName>
                </value>
                <value>
                    <fullName>keine Info</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kostentraeger_Mitarbeiter__c</fullName>
        <label>Kostenträger Mitarbeiter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rechnung_wird_bezahlt_von__c</fullName>
        <label>Rechnung wird bezahlt von</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mitarbeiter</fullName>
                </value>
                <value>
                    <fullName>doctari</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>benoetigte_Unterkunftstage__c</fullName>
        <label>benötigte Unterkunftstage</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Entfernung_Klinik_Unterkunft_max__c</fullName>
        <label>Entfernung Klinik - Unterkunft max.</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>